# redisctl

./: .env.example  .gitignore  .mdbook-lint.toml  CHANGELOG.md  CLAUDE.md  CLOUD_TESTING_STRATEGY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  ENTERPRISE_AUDIT.md  JSON_OUTPUT_AUDIT.md  README.md  RELEASE.md  RELEASES.md  RELEASE_AUDIT.md  SECURITY.md  cliff.toml  deny.toml  dist-workspace.toml  docker-compose.yml  docker-init.sh  release-plz.toml  release.toml
.cargo/: audit.toml
.github/workflows/: cargo-deny.yml  cargo-dist.yml  cargo-workspaces-release.yml  ci.yml  docker.yml  docs.yml  manual-release.yml  mdbook.yml  publish-crates.yml  python-publish.yml  python.yml  release-plz.yml  release.yml  security.yml  v-release.yml
crates/redis-cloud/: CHANGELOG.md  Cargo.toml  README.md
crates/redis-cloud/src/: client.rs  cloud_accounts.rs  lib.rs  lib_tests.rs  tasks.rs
crates/redis-cloud/src/connectivity/: private_link.rs
crates/redis-cloud/src/fixed/: databases.rs
crates/redis-cloud/src/flexible/: databases.rs  subscriptions.rs
crates/redis-cloud/tests/: openapi_validation.rs
crates/redis-enterprise/: CHANGELOG.md  Cargo.toml  README.md
crates/redis-enterprise/src/: actions.rs  alerts.rs  bdb.rs  bdb_groups.rs  client.rs  cluster.rs  debuginfo.rs  lib.rs  lib_tests.rs  license.rs  logs.rs  modules.rs  nodes.rs  proxies.rs  shards.rs  stats.rs  users.rs
crates/redis-enterprise/tests/: cluster_tests.rs  database_tests.rs  fixture_validation_tests.rs  license_tests.rs  module_tests.rs  user_tests.rs
crates/redis-enterprise/tests/common/: fixtures.rs  mod.rs
crates/redis-enterprise/tests/fixtures/: bdb_single.json  bdbs_list.json  bdbs_stats.json  bootstrap_status.json  cluster.json  cluster_stats.json  node_single.json  nodes_list.json  nodes_stats.json  shards_list.json
crates/redisctl/: CHANGELOG.md  Cargo.toml
crates/redisctl-config/: CHANGELOG.md  Cargo.toml  README.md
crates/redisctl-config/src/: config.rs  credential.rs  error.rs  lib.rs
crates/redisctl-mcp/: CHANGELOG.md  Cargo.toml
crates/redisctl-mcp/src/: cloud_tools.rs  database_tools.rs  enterprise_tools.rs  error.rs  jmespath.rs  lib.rs  server.rs
crates/redisctl-python/: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
crates/redisctl-python/python/redisctl/: __init__.py  __init__.pyi
crates/redisctl-python/src/: cloud.rs  enterprise.rs  error.rs  lib.rs  runtime.rs
crates/redisctl-python/tests/: __init__.py  test_clients.py
crates/redisctl/src/: cli.rs  config.rs  connection.rs  credential_store.rs  error.rs  lib.rs  main.rs  output.rs  resilience.rs
crates/redisctl/src/cli/: cloud.rs  enterprise.rs  mod.rs
crates/redisctl/src/commands/: api.rs  cloud.rs  cloud_v2.rs  files_key.rs  mod.rs  profile.rs
crates/redisctl/src/workflows/: mod.rs
crates/redisctl/tests/: cli_basic_tests.rs  cli_integration_mocked_tests.rs  cli_profile_tests.rs  cloud_output_test.rs  docker_wrapper_tests.rs  enterprise_docker_integration_tests.rs
docs/: book.toml  cloud-api-feedback.md  mcp-discovery.json  session-notes.md
docs/src/: SUMMARY.md  demos.md  introduction.md  walkthrough.md
docs/src/api-reference/: api.md
docs/src/cloud/: api-access.md  api.md  commands.md  connectivity.md  examples.md  overview.md  workflows.md
docs/src/cloud/access-control/: acl.md  users.md
docs/src/cloud/commands/: access-control.md  (+4 more)
docs/src/common-features/: async-operations.md  jmespath-queries.md  output-formats.md  profiles.md  raw-api.md  secure-storage.md
docs/src/comparison/: rladmin.md
docs/src/cookbook/: README.md
docs/src/developer/: architecture.md  contributing.md  libraries.md
docs/src/enterprise/: actions.md  api-access.md  api.md  commands.md  debuginfo.md  diagnostics.md  examples.md  migration.md  ocsp.md  operations.md  overview.md  workflows.md
docs/src/features/: profiles.md  smart-commands.md  workflows.md
docs/src/getting-started/: async-operations.md  authentication.md  common-features.md  configuration.md  docker.md  examples.md  installation.md  jmespath-queries.md  output-formats.md  profiles.md  quickstart.md  shell-completions.md
docs/src/integrations/: mcp.md
docs/src/presentation/: index.md  slides.html
docs/src/reference/: api.md  best-practices.md  config-file.md  environment-variables.md  output-formats.md  rladmin.md  security.md  shell-completions.md  troubleshooting.md
docs/src/tutorials/: cicd.md  common-recipes.md  disaster-recovery.md  monitoring.md  network-security.md  production-databases.md
docs/src/walkthrough/: 01-problem.md  02-solution.md  03-setup.md  04-raw-api.md  05-human-friendly.md  06-workflows.md  07-advanced.md  08-libraries.md  09-next-steps.md  README.md  cloud-examples.md  enterprise-examples.md  overview.md  rladmin-comparison.md
docs/theme/: custom.css
examples/presentation/: 01-before-redisctl.sh  02-after-redisctl.sh  03-demo-workflow.sh  DEMO.md  PRESENTATION_OUTLINE.md  README.md  RLADMIN_COMPARISON.md
mkdocs-site/: mkdocs.yml
mkdocs-site/docs/: index.md
mkdocs-site/docs/cloud/: index.md
mkdocs-site/docs/common/: async-operations.md  index.md  jmespath.md  output-formats.md  profiles.md  raw-api.md
mkdocs-site/docs/cookbook/: index.md
mkdocs-site/docs/developer/: architecture.md  contributing.md  index.md  libraries.md  python.md
mkdocs-site/docs/enterprise/: index.md  workflows.md
mkdocs-site/docs/getting-started/: authentication.md  docker.md  installation.md  quickstart.md
mkdocs-site/docs/mcp/: getting-started.md  index.md  tools-reference.md  workflows.md
mkdocs-site/docs/presentation/: slides.html
mkdocs-site/docs/reference/: config-file.md  environment-variables.md  rladmin.md  security.md  shell-completions.md
scripts/: generate-cloud-fixtures.sh  generate-enterprise-fixtures.sh  release.sh  test-release.sh  test_cloud_api.sh
vhs/: README.md  async-operations.tape  cloud-demo.tape  demo-config.toml  demo.tape  enterprise-demo.tape  generate-clean-demos.sh  generate-demos.sh  profile-management.tape  quick-start.tape  restore-config.sh  setup-demo-env.sh
(+146 files in other folders)
