[package]
name = "redis-enterprise"
version = "0.7.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Redis Enterprise REST API client library"
keywords = ["redis", "enterprise", "api", "rest", "client"]
categories = ["api-bindings", "database"]
readme = "../../README.md"



[dependencies]
async-trait = { workspace = true }
async-stream = "0.3"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = "0.1"
serde_urlencoded = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
typed-builder = "0.20"
tower = { version = "0.5", optional = true }

[features]
tower-integration = ["tower"]

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "test-util"] }
pretty_assertions = { workspace = true }
serial_test = { workspace = true }
env_logger = "0.11.8"
tower = { version = "0.5", features = ["timeout", "limit", "retry", "buffer"] }
chrono.workspace = true
