[package]
name = "redisctl-config"
version = "0.1.0"
edition = "2024"
authors = ["Josh Rotenberg <josh@redislabs.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshrotenberg/redisctl"
homepage = "https://github.com/joshrotenberg/redisctl"
description = "Configuration and profile management for Redis CLI tools"
keywords = ["redis", "config", "profile", "credentials"]
categories = ["config", "authentication"]
readme = "README.md"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Error handling (use thiserror for libraries)
thiserror = "2.0"

# Platform paths
directories = "6.0"

# Environment variable expansion
shellexpand = "3.1"

# CLI support (for ValueEnum derive)
clap = { version = "4.5", features = ["derive"] }

# Optional: Secure credential storage
keyring = { version = "3.6", optional = true, features = ["apple-native", "windows-native", "linux-native"] }

[dev-dependencies]
serial_test = "3.1"
tempfile = "3.8"

[features]
default = []
# Note: secure-storage may not work on musl targets due to keyring native dependencies
secure-storage = ["dep:keyring"]
