[package]
name = "redisctl-mcp"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "MCP (Model Context Protocol) server for Redis Cloud and Enterprise"
keywords = ["redis", "mcp", "ai", "cloud", "enterprise"]
categories = ["api-bindings", "development-tools"]

[dependencies]
# MCP SDK
rmcp = { version = "0.12", features = ["server", "transport-io", "macros"] }
schemars = "0.8"

# Internal crates
redisctl-config = { version = "0.2.1", path = "../redisctl-config" }
redis-cloud = { version = "0.7.5", path = "../redis-cloud" }
redis-enterprise = { version = "0.7.2", path = "../redis-enterprise" }

# Core dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# JMESPath for query support
jmespath = "0.4"
jmespath_extensions = { version = "0.7", features = ["full"] }

[dev-dependencies]
tokio = { workspace = true }
