[package]
name = "redisctl-python"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Python bindings for Redis Cloud and Enterprise management APIs"
keywords = ["redis", "cloud", "enterprise", "python", "pyo3"]
categories = ["api-bindings", "database"]

[lib]
name = "redisctl"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.23", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }

# Internal crates
redis-cloud = { path = "../redis-cloud" }
redis-enterprise = { path = "../redis-enterprise" }

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.23"

[features]
default = []
# Enable this for building with abi3 for broader Python version compatibility
abi3 = ["pyo3/abi3-py39"]
