[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "redisctl"
version = "0.1.0"
description = "Python bindings for Redis Cloud and Enterprise management APIs"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
authors = [
    { name = "Josh Rotenberg", email = "joshrotenberg@gmail.com" }
]
keywords = ["redis", "cloud", "enterprise", "api", "management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/redis-developer/redisctl"
Repository = "https://github.com/redis-developer/redisctl"
Documentation = "https://github.com/redis-developer/redisctl#python-bindings"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
]

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py39"]
python-source = "python"
module-name = "redisctl"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
